[package]
name = "blockchain-yield-farming"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive yield farming client for Ethereum blockchain"
license = "MIT"
repository = "https://github.com/yourusername/blockchain-yield-farming"
keywords = ["blockchain", "ethereum", "defi", "yield-farming", "web3"]
categories = ["blockchain", "cryptography"]

[dependencies]
web3 = "0.19"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
hex = "0.4"
rust_decimal = "1.32"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[[bin]]
name = "yield-farming-client"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
